# kernel-event-collector-module

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  conanfile.py  peru.yaml  project.yml
app_control_event_kernel_module/: README.md  conanfile.py  pkg.yml
app_control_event_kernel_module/include/: dynsec.h
app_control_event_kernel_module/src/: CMakeLists.txt  config.h  dynsec.c  factory.c  factory.h  fs_utils.h  hooks.c  hooks.h  inode_cache.c  inode_cache.h  logging.h  lsm.c  lsm_mask.h  mem.h  mem_utils.c  mem_utils.h  path_hooks.c  path_hooks.h  path_utils.c  path_utils.h  preaction_hooks.c  preaction_hooks.h  proc_stats.c  protect.c  protect.h  sample.make  stall_reqs.c  stall_reqs.h  stall_tbl.c  stall_tbl.h  symbols.c  symbols.h  task_cache.c  task_cache.h  task_utils.c  task_utils.h  tracepoints.c  tracepoints.h  wait.c  wait.h
bpf_file_notify/: README.md  conanfile.py  pkg.yml
bpf_file_notify/include/: file_notify.h  file_notify_transport.h
bpf_file_notify/src/: CMakeLists.txt  file_notify.bpf.c  file_notify.c  test_file_notify.c
bpf_probe/: conanfile.py  pkg.yml
bpf_probe/check_probe/: Dockerfile  Dockerfile.arm  README.md  daemonset.yaml  run_check_probe.sh
bpf_probe/check_probe/src/: check_probe.cpp
bpf_probe/include/: BpfApi.h  BpfApi_Mock.h  BpfProgram.h  EventFactory.h  bcc_sensor.h  missing.h  transport.h
bpf_probe/include/mock/: BpfApi_Mock.h
bpf_probe/include/vmlinux/arm64/: vmlinux.h
bpf_probe/include/vmlinux/x86/: vmlinux.h
bpf_probe/libbpf_probe/: build.Dockerfile  run.Dockerfile
bpf_probe/libbpf_probe/scripts/: builder_build.sh  edit.sh  run.sh  runner_build.sh  update.sh
bpf_probe/libbpf_probe/src/: Makefile  build.sh  libbpf_sensor.c  sensor.bpf.c
bpf_probe/network_probes/: README.md  dns_prog.c  network_tracer_prog.c
bpf_probe/src/: BpfApi.cpp  BpfProgram.cpp  CMakeLists.txt  LibbpfApi.cpp  bcc_sensor.c  check_probe.cpp  generate.sh  sensor.bpf.c
bpf_probe/src/tests/: BpfApi_Mock.cpp  BpfApi_tests.cpp  CMakeLists.txt  RunAllTests.cpp
cmake/: FindCbKernelUtil.cmake
dynsec/: README.md  conanfile.py  pkg.yml
dynsec/include/: dynsec.h
dynsec/src/: CMakeLists.txt  Makefile.old  README.md  config.h  dyn-sec.c  dynsec.c  factory.c  factory.h  hooks.c  hooks.h  inode_cache.c  inode_cache.h  logging.h  lsm.c  lsm_mask.h  opcache.c  opcache.h  path_utils.c  path_utils.h  preaction_hooks.c  preaction_hooks.h  stall.c  stall.h  stall_reqs.c  stall_reqs.h  stall_tbl.c  stall_tbl.h  symbols.c  symbols.h  task_cache.c  task_cache.h  task_utils.c  task_utils.h  tracepoints.c  tracepoints.h  usercomm.c  usercomm.h  usercomm_msgs.h
dynsec/src/examples/: CMakeLists.txt  dynsec_dev.c
dynsec/src/tests/: Makefile  README.md  client.c  client.h  client.py  client_test.c  dev.c  dump_all.c  dynsec.py  exp.c  exp.h  print.c  print.h  rename.c  rename.h  sizeof.c  sizeof.py  stall_disable_test.c  test_utils.c  test_utils.h  tests.c
dynsec/src/tests/mockdaemon/: main.cpp
dynsec/src/tests/performance/exec/: main.cpp
dynsec/src/tests/usercomm/: main.cpp
include/: InodeState.h  cb-test.h  dbg.h  raw_event.h  version.h.in
kernel-event-collector-module/include/: raw_event.h
kernel-event-collector-module/src/: CMakeLists.txt  file-hooks.c  file-process-tracking.c  file-process-tracking.h  fops-comm.c  hash-table-generic.h  process-hooks.c  process-tracking-discovery.c  process-tracking.c  process-tracking.h
kernel_event_collector_module/: conanfile.py  pkg.yml
kernel_event_collector_module/include/: cb-test.h  raw_event.h
kernel_event_collector_module/src/: CMakeLists.txt  cb-banning.c  cb-build.cmake  cb-isolation.c  cb-isolation.h  cb-spinlock.c  cb-spinlock.h  cb-stats.c  dns-parser.c  drvmain.c  event-factory.c  event-factory.h  file-helper.c  file-helper.h  file-hooks.c  file-process-tracking.c  file-process-tracking.h  findsyms.c  findsyms.h  fops-comm.c  hash-table-generic.c  hash-table-generic.h  hash-table.c  hash-table.h  hook-tracking.c  local-build.cmake  logger.c  lsm.c  mem-alloc.c  mem-alloc.h  mem-cache.c  mem-cache.h  module-hooks.c  module_state.h  modules.c  net-helper.c  net-helper.h  net-hooks.c  net-hooks.h  net-tracking.c  (+25 more)
kernel_event_collector_module/src/tests/: comms-tests.c  hashtabl-tests.c  mem-cache-tests.c  module-state-tests.c  path-tests.c  plru-tests.c  process-tracking-tests.c  run-tests.c  run-tests.h  stall-tests.c
src/: CMakeLists.txt  cb-banning.c  cb-banning.h  cb-isolation.c  cb-isolation.h  cb-module-state-export.c.in  cb-spinlock.c  cb-spinlock.h  cb-stats.c  conanfile.py  drvmain.c  event-factory.c  event-factory.h  file-helper.c  file-hooks.c  file-process-tracking.c  file-process-tracking.h  file-types.c  file-types.h  findsyms.c  findsyms.h  fops-comm.c  hash-table-generic.c  hash-table-generic.h  hook-tracking.c  hook-tracking.h  logger.c  lsm.c  mem-cache.c  mem-cache.h  module-hooks.c  modules.c  net-helper.c  net-helper.h  net-hooks.c  netfilter.c  network-tracking.h  page-helpers.c  page-helpers.h  patch-sched.c  (+21 more)
src/include/: raw_event.h  version.h.in
src/module/: CMakeLists.txt  cb-banning.c  drvmain.c  event-factory.c  event-factory.h  file-helper.c  file-hooks.c  fops-comm.c  hash-table-generic.c  logger.c  mem-cache.h  net-hooks.c  priv.h  process-tracking-helpers.c  process-tracking-show.c  process-tracking.c  process-tracking.h  syscall_init.c  task-helper.h
src/tests/: hashtabl-tests.c  module-state-tests.c  process-tracking-tests.c  run-tests.c  run-tests.h
util/: build-module.sh
